# bookshelf

./: .gitignore  CONTRIBUTING.md  README.md  requirements-dev.txt  setup.cfg
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml
.github/ISSUE_TEMPLATES/: enhancement.yaml
.github/workflows/: cicd.yaml  release.yaml
bookshelf/: __main__.py  console.py  exceptions.py  models.py  param_types.py  storage.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Terminal.jsx
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: autocomplete.mdx  glossary.mdx  installation.mdx
docs/src/content/docs/reference/: cancel.mdx  create.mdx  finish.mdx  info.mdx  ls.mdx  rm.mdx  start.mdx  stop.mdx  tag.mdx  untag.mdx  use-bookshelf-cli.mdx
test/: test_exceptions.py  test_models.py  test_param_types.py  test_storage.py
test/utils/: chapter_utils.py  storage_utils.py
