[metadata]
name = bookshelf-cli
version = attr: bookshelf.__version__
author = Joss Moffatt
description = 📚 A CLI tool for tracking your stories in the SDLC.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bookshelf.docs.joss.dev/
project_urls =
  Issue Tracker = https://github.com/jossmoff/bookshelf/issues


[options]
packages=find:
install_requires =
    rich>=13.6.0
    rich_click>=1.7.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
  bookshelf = bookshelf.__main__:entry_point

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    venv
max-complexity = 10